fixes package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "just-tech-news",
+  "name": "tech-blog",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shhu21/just-tech-news.git"
+    "url": "git+https://github.com/shhu21/tech-blog.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shhu21/just-tech-news/issues"
+    "url": "https://github.com/shhu21/tech-blog/issues"
   },
-  "homepage": "https://github.com/shhu21/just-tech-news#readme",
+  "homepage": "https://github.com/shhu21/tech-blog#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.0.1",
